force-app/main/default/objects/Site__c/fields/Building_Clear_Height_ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Clear_Height_ft__c</fullName>
    <label>Building Clear Height (ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>