force-app/main/default/objects/Site__c/fields/Building_Size_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Building_Size_Square_Feet__c</fullName>
    <label>Building Size (Square Feet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>