force-app/main/default/objects/Site__c/fields/iTrax_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>iTrax_Activity_ID__c</fullName>
    <label>iTrax Activity ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>