force-app/main/default/objects/Site__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>