force-app/main/default/objects/Site__c/fields/Mailing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_State__c</fullName>
    <label>Mailing Address State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>