force-app/main/default/objects/Site__c/fields/Mailing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Street__c</fullName>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>