force-app/main/default/objects/Site__c/fields/Mailing_Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Zip__c</fullName>
    <label>Tech Site Name</label>
    <length>5</length>
    <type>Text</type>
</CustomField>