force-app/main/default/objects/Site__c/fields/Major_Activity__c.field-meta.xml
<CustomField>
    <fullName>Major_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Activity</label>
    <type>Checkbox</type>
</CustomField>