force-app/main/default/objects/Site__c/fields/Maximum_Investment__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Investment__c</fullName>
    <label>Maximum Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>