force-app/main/default/objects/Site__c/fields/Maximum_Weekly_Rail_Volume__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Weekly_Rail_Volume__c</fullName>
    <label>Maximum Weekly Rail Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>