force-app/main/default/objects/Site__c/fields/Minimum_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Jobs__c</fullName>
    <label>Minimum Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>