force-app/main/default/objects/Site__c/fields/Minimum_Weekly_Rail_Volume__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Weekly_Rail_Volume__c</fullName>
    <label>Minimum Weekly Rail Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>