force-app/main/default/objects/Site__c/fields/NS_Date_of_State_Lead__c.field-meta.xml
<CustomField>
    <fullName>NS_Date_of_State_Lead__c</fullName>
    <label>Date of State Lead</label>
    <type>Date</type>
</CustomField>