force-app/main/default/objects/Site__c/fields/NS_Description__c.field-meta.xml
<CustomField>
    <fullName>NS_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>