force-app/main/default/objects/Site__c/fields/NS_Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Initial_Contact_Date__c</fullName>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>