force-app/main/default/objects/Site__c/fields/NS_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>NS_Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tate</fullName>
            </value>
            <value>
                <fullName>Parker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>