force-app/main/default/objects/Site__c/fields/NS_Physical_Plant_Location__c.field-meta.xml
<CustomField>
    <fullName>NS_Physical_Plant_Location__c</fullName>
    <description>ID City, State Validation Rules needed?</description>
    <label>Physical Plant Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>