force-app/main/default/objects/Site__c/fields/NSSales_Site_Class__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Site_Class__c</fullName>
    <label>Site Class</label>
    <type>TextArea</type>
</CustomField>