force-app/main/default/objects/Site__c/fields/Power_Requirement_MW__c.field-meta.xml
<CustomField>
    <fullName>Power_Requirement_MW__c</fullName>
    <label>Power Requirement (MW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>