force-app/main/default/objects/Site__c/fields/Site_Index_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Index_Number__c</fullName>
    <label>Site Index Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>