force-app/main/default/objects/Site__c/fields/Site_Owner__c.field-meta.xml
<CustomField>
    <fullName>Site_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>