force-app/main/default/objects/Site__c/fields/Site_Selection_Company__c.field-meta.xml
<CustomField>
    <fullName>Site_Selection_Company__c</fullName>
    <label>Site Selection Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>