force-app/main/default/objects/Site__c/fields/Site_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Site_Size_Acres__c</fullName>
    <label>Site Size (Acres)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>