force-app/main/default/objects/Site__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norfolk Southern</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>