force-app/main/default/objects/Site__c/fields/Technical_Name__c.field-meta.xml
<CustomField>
    <fullName>Technical_Name__c</fullName>
    <label>Technical Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>